--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "onchange": "^3.2.1",
     "postcss-cli": "^3.1.1",
     "rimraf": "^2.6.1",
+    "uglify-save-license": "^0.4.1",
     "webpack": "^2.3.3"
   },
   "babel": {
