--- a/package.json
+++ b/package.json
@@ -16,21 +16,23 @@
     "build:css": "npm run build:sass && npm run build:postcss",
     "build:webpack": "webpack",
     "build:clean": "npm run clean && mkdirp dist/styles dist/scripts",
-    "build": "npm-run-all -s build:clean -p build:ejs build:css build:webpack",
+    "build": "npm-run-all -s build:clean -p build:ejs build:css build:webpack copy",
     "dev:ejs": "ejs-cli --base-dir src/ejs \"*.ejs\" --out dist/",
     "dev:sass": "node-sass src/styles/all.scss dist/styles/bundle.min.css --output-style expanded",
     "dev:postcss": "postcss dist/styles/*.css --use autoprefixer -b \"last 2 versions\" --output dist/styles/*.css",
     "dev:css": "npm run dev:sass && npm run dev:postcss",
     "dev:webpack": "webpack --config webpack.config.dev.js",
     "dev:mkdir": "mkdirp dist/styles dist/scripts",
-    "dev": "npm-run-all -s dev:mkdir -p dev:ejs dev:css dev:webpack",
+    "dev": "npm-run-all -s dev:mkdir -p dev:ejs dev:css dev:webpack copy",
     "watch:ejs": "onchange \"src/ejs/**/*\" -- npm run dev:ejs",
     "watch:css": "onchange \"src/styles/**/*\" -- npm run dev:css",
     "watch:js": "onchange \"src/scripts/**/*\" -- npm run dev:webpack",
-    "watch": "npm-run-all -p watch:ejs watch:css watch:js",
+    "watch:copy": "cpx \"src/**/*.{gif,png,jpg}\" dist --watch",
+    "watch": "npm-run-all -p watch:ejs watch:css watch:js watch:copy",
     "server": "browser-sync start --server dist --files \"./dist/**/*\"",
     "start": "npm run dev & npm run watch & npm run server",
     "lint": "eslint src/scripts",
+    "copy": "cpx \"src/**/*.{gif,png,jpg}\" dist",
     "clean": "rimraf dist"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.4.0",
     "browser-sync": "^2.18.8",
+    "cpx": "^1.5.0",
     "csswring": "^5.1.1",
     "ejs-cli": "^2.0.0",
     "eslint": "^3.19.0",
