Modify npm scripts見直し

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend-starter",
   "version": "0.0.1",
-  "description": "My front-end starter kit. babel webpack sass",
+  "description": "My front-end starter kit. babel webpack sass ejs",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -10,29 +10,26 @@
   "author": "Tatsuya Azegami",
   "license": "MIT",
   "scripts": {
+    "start": "npm-run-all dev -p watch server",
+    "build": "npm-run-all clean mkdir build:sass build:postcss -p build:ejs build:webpack copy",
     "build:ejs": "ejs-cli --base-dir src/ejs \"*.ejs\" --out dist/",
     "build:sass": "node-sass src/styles/all.scss dist/styles/bundle.min.css",
     "build:postcss": "postcss dist/styles/*.css --no-map --use autoprefixer -b \"last 2 versions\" --use csswring --output dist/styles/*.css",
-    "build:css": "npm run build:sass && npm run build:postcss",
     "build:webpack": "webpack",
-    "build:clean": "npm run clean && mkdirp dist/styles dist/scripts",
-    "build": "npm-run-all -s build:clean -p build:ejs build:css build:webpack copy",
+    "dev": "npm-run-all mkdir dev:sass dev:postcss -p dev:ejs dev:webpack copy",
     "dev:ejs": "ejs-cli --base-dir src/ejs \"*.ejs\" --out dist/",
     "dev:sass": "node-sass src/styles/all.scss dist/styles/bundle.min.css --output-style expanded",
     "dev:postcss": "postcss dist/styles/*.css --use autoprefixer -b \"last 2 versions\" --output dist/styles/*.css",
-    "dev:css": "npm run dev:sass && npm run dev:postcss",
     "dev:webpack": "webpack --config webpack.config.dev.js",
-    "dev:mkdir": "mkdirp dist/styles dist/scripts",
-    "dev": "npm-run-all -s dev:mkdir -p dev:ejs dev:css dev:webpack copy",
+    "watch": "npm-run-all -p watch:*",
     "watch:ejs": "onchange \"src/ejs/**/*\" -- npm run dev:ejs",
     "watch:css": "onchange \"src/styles/**/*\" -- npm run dev:css",
     "watch:js": "onchange \"src/scripts/**/*\" -- npm run dev:webpack",
-    "watch:copy": "cpx \"src/**/*.{svg,gif,png,jpg}\" dist --watch",
-    "watch": "npm-run-all -p watch:ejs watch:css watch:js watch:copy",
+    "watch:copy": "cpx \"src/**/*.{svg,gif,png,jpg,html}\" dist --watch",
     "server": "browser-sync start --server dist --files \"./dist/**/*\"",
-    "start": "npm run dev & npm run watch & npm run server",
     "lint": "eslint src/scripts",
     "copy": "cpx \"src/**/*.{svg,gif,png,jpg}\" dist",
+    "mkdir": "mkdirp dist/styles dist/scripts",
     "clean": "rimraf dist"
   },
   "devDependencies": {
