--- a/package.json
+++ b/package.json
@@ -13,23 +13,23 @@
     "start": "npm-run-all dev -p watch server",
     "build": "npm-run-all clean mkdir build:sass build:postcss -p build:ejs build:webpack copy",
     "build:ejs": "ejs-cli --base-dir src/ejs \"*.ejs\" --out dist/",
-    "build:sass": "node-sass src/styles/all.scss dist/styles/bundle.min.css",
-    "build:postcss": "postcss dist/styles/*.css --no-map --use autoprefixer -b \"last 2 versions\" --use csswring --output dist/styles/*.css",
+    "build:sass": "node-sass src/scss/all.scss dist/css/bundle.min.css",
+    "build:postcss": "postcss dist/css/*.css --no-map --use autoprefixer -b \"last 2 versions\" --use csswring --output dist/css/*.css",
     "build:webpack": "webpack",
     "dev": "npm-run-all mkdir dev:sass dev:postcss -p dev:ejs dev:webpack copy",
     "dev:ejs": "ejs-cli --base-dir src/ejs \"*.ejs\" --out dist/",
-    "dev:sass": "node-sass src/styles/all.scss dist/styles/bundle.min.css --output-style expanded",
-    "dev:postcss": "postcss dist/styles/*.css --use autoprefixer -b \"last 2 versions\" --output dist/styles/*.css",
+    "dev:sass": "node-sass src/scss/all.scss dist/css/bundle.min.css --output-style expanded",
+    "dev:postcss": "postcss dist/css/*.css --use autoprefixer -b \"last 2 versions\" --output dist/css/*.css",
     "dev:webpack": "webpack --config webpack.config.dev.js",
     "watch": "npm-run-all -p watch:*",
     "watch:ejs": "onchange \"src/ejs/**/*\" -- npm run dev:ejs",
-    "watch:css": "onchange \"src/styles/**/*\" -- npm run dev:css",
-    "watch:js": "onchange \"src/scripts/**/*\" -- npm run dev:webpack",
+    "watch:css": "onchange \"src/scss/**/*\" -- npm run dev:sass && npm run dev:postcss",
+    "watch:js": "onchange \"src/js/**/*\" -- npm run dev:webpack",
     "watch:copy": "cpx \"src/**/*.{svg,gif,png,jpg,html}\" dist --watch",
     "server": "browser-sync start --server dist --files \"./dist/**/*\"",
-    "lint": "eslint src/scripts",
+    "lint": "eslint src/js",
     "copy": "cpx \"src/**/*.{svg,gif,png,jpg}\" dist",
-    "mkdir": "mkdirp dist/styles dist/scripts",
+    "mkdir": "mkdirp dist/css dist/js",
     "clean": "rimraf dist"
   },
   "devDependencies": {
